updated css and html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,9 +9,7 @@ body {
   /*cor do body com uma variavel*/
   display: flex;
   justify-content: center;
-
-
-
+  
 }
 
 #logo {
@@ -25,13 +23,13 @@ body {
   /* Centraliza verticalmente */
   padding: 0.8rem;
 
-
 }
 
 .back {
   display: flex;
   font-size: 1rem;
   gap: 0.2rem;
+  margin-bottom: 1rem;
   align-items: center;
   margin-left: 2rem;
   margin-top: 4.87rem;
@@ -39,8 +37,6 @@ body {
   .a {
     color: #CA3884;
   }
-
-
 
   .icon {
     width: 1.1rem;
@@ -55,46 +51,37 @@ body {
     saturate(728%) → Aumenta a saturação da cor para ficar mais intensa. 
     
     hue-rotate(310deg) → Gira a matiz da cor para chegar no tom exato de #CA3884 */
-
   }
-
 }
 
 .h2 {
-  margin-top: 1rem;
-  margin-left: 2rem;
-}
-
-.add {
-  display: grid;
-  width: 20.37rem;
-  height: 4.75rem;
-  margin-left: 1.6rem;
-  margin-top: 2.75rem;
-  gap: 1rem;
-  font: var(--label);
-}
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  padding-left: 3rem;
+ }
 
 .new-item {
-
   font-size: .9rem;
   /* Aumenta o tamanho da fonte */
-
   font-weight: 500;
   /* Deixa o texto em negrito (opcional) */
   display: grid;
-  height: 2.5rem;
+  height: 3.5rem;
   row-gap: .7rem;
-  border-radius: .5rem;
   margin: 2.75rem 2rem 2.5rem 2rem;
+  
+
+}
+   
+#add-item {
+    width: 18rem;
+    height: 2.7rem;
 }
 
-
-
-
 .btn {
-  height: 2.5rem;
-  border-radius: .5rem;
+  height: 2.7rem;
+  border-radius: .3rem;
   background-color: #CA3884;
   font: var(--link);
   color: #FFFFFF;
@@ -104,16 +91,145 @@ body {
 .form {
   display: grid;
   row-gap: 1.5rem;
-  border: solid 1px black;
+  
+}
+
+
+input {
+  font: var(--label);
+  border-radius: .3rem;
+
+}
+
+.items{
+  
+  display:flex ;
+  justify-content: center;
+  align-items:center;
+  border-radius: .3rem;
 }
 
 label {
+  display: flex;
   font: var(--label);
-  width: 10rem;
-  height: 3.56rem;
-  border: solid 1px blue;
+  width: 15rem;
+  height: 2.5rem;
+  align-items: center;
+  justify-content: flex-start;
+  padding: .8rem;
+  background-color: var(--always-white);
+  border-radius: .5rem;
 }
 
-input{
+.remove {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font: var(--label);
+  width: 19.43rem;
+  height: 2.75rem;
+  margin-top: 1rem;
+  border-radius: 5rem;
+  transform: translateX(1rem);
+  background-color: var(--color-danger);
+
+  .icon-2{
+    width: 1.4rem;
+    height: 1.4rem;
+    margin: .8rem;
+    
+    filter: invert(100%) sepia(50%) saturate(50%) hue-rotate(-10deg);
+   }
+  
+   .delete{
+    width: 1.4rem;
+    height: 1.4rem;
+    margin: .8rem;
+    font-weight: 800;
+    filter: invert(100%) sepia(50%) saturate(50%) hue-rotate(-10deg);
+
+   }
+   
 }
+
+ 
+
+
+/* definindo tel telas acima de 1280px (80rem)*/
+@media (width >=80rem) {
+  :root {
+
+  .body {
+    margin: 1rem 23.09rem 10.06rem 23.09rem;
+
+  }
+
+  #logo {
+    display: flex;
+    }
+         
+  .new-item {
+    display: flex;
+    height: 2.5rem;
+    gap: 0.9rem;
+    border-radius: .1rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .items {
+    width: 28rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    transform: translateX(2rem); 
+    }
+  }
+
+  #add-item {
+    width: 19rem;
+    height: 2.7rem;
+  }
+      
+  .btn {
+    width: 8rem;
+  }
+     
+  .trash {
+    display: flex;
+    transform: translate(-1.5rem);   
+  }
+  
+  label {
+    min-width: 27rem;
+    height: 2.5rem;
+    transform: translateX(.4rem);
+  }
+
+  .checkbox{
+    transform: translateX(-.2rem);
+  }
+    
+  .remove {
+    width: 30rem;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-left: 1.4rem;
+    transform: translateX(-.4rem);
+
+    .icon-2 {
+     width:1.5rem;
+     height: 1.5rem;
+     transform: translateX(-5.6rem);
+      
+  }
+    
+  .delete {
+     width: 1.5rem;
+     height: 1.5rem;
+     margin: .8rem;
+     transform: translateX(4.8rem);          
+   }
+  }
+}
+
